--- a/css/style.css
+++ b/css/style.css
@@ -6,21 +6,40 @@
 
 body {
     background-color: rgb(89, 163, 243);
-    display: flex;
-    justify-content: center;
-    padding-top: 30px;
+    text-align: center;
 }
 
 .container{
     width: 650px;
     display: flex;
     flex-wrap: wrap;
+    margin: 10px auto;
+}
+
+#play {
+    margin: 10px auto;
 }
 
 .box {
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.box-facile {
     width: 65px;
     height: 65px;
-    border: 1px solid black;
+}
+
+.box-medio {
+    width: calc(650px / 9);
+    height: calc(650px / 9);
+}
+
+.box-difficile {
+    width: calc(650px / 7);
+    height: calc(650px / 7);
 }
 
 .red {
